Re-add ids and wrapping fix

--- a/less/styles.less
+++ b/less/styles.less
@@ -228,6 +228,10 @@
   display:flex;
 }
 
+.list-view-pf-additional-info-item {
+  width: 7em; // set the width so they wrap at the same time regardless of contents
+}
+
 // Adjust width of list-view items to make more space for the description and heading
 @media (min-width: @screen-md-min) {
   .list-view-pf-additional-info {
